--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,11 +1,16 @@
 *{
     box-sizing: border-box;
-    display:table;
+    font-family: Arial, Helvetica, sans-serif;
+    
 }
 body{
     padding:0;
     margin:0;
+    text-align: center;
+    background: linear-gradient(#F0FFFF,#BBFFFF) ;
 }
+
+h1{color: #4A777A}
 ul{
     list-style-type: none;
 }
