--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,25 +1,73 @@
+@import url('https://fonts.googleapis.com/css?family=Luckiest+Guy&display=swap');
 * {
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
 }
-
+nav.header-nav a, .tech {font-family: 'luckiest guy';}
 body {
-  padding: 0;
+  padding: 20px;
   margin: 0;
-  text-align: center;
-  background: linear-gradient(#F0FFFF, #BBFFFF);
+  background-color: #f0f0f0;
+  overflow-x: hidden;
+  width: 100%;
+
 }
 
-h1 {
-  color: #4A777A;
+#shape {
+  width:2500px;
+  height: 600px;
+  background-color: #677187;
+  border-bottom: 15px solid #968484;
+  transform: rotate(20deg);
+  position: absolute;
+  top: -160px;
+  left: -10px;
+  z-index: -1;
+  transition: all 700ms;
 }
 
-ul {
-  list-style-type: none;
+.logo {
+  float:left;
+  clear: left;
 }
 
-.nameLogo {
-  font-size: 25px;
+.logo img{
+  width: 200px;
 }
 
-/*# sourceMappingURL=style.css.map */
+nav.header-nav {
+  float: right;
+}
+
+nav.header-nav a {
+  text-decoration: none;
+  display: inline-block;
+  color: rgb(190, 186, 186);
+  
+  font-size: 23px;
+  font-weight: bold;
+  padding: 5px 7px;
+  transition: color 500ms;
+}
+nav.header-nav a.active{color: white;}
+nav.header-nav a:hover{
+  color: white;
+}
+
+.tech-cloud{
+  float:left;
+  clear: both;
+  width: 100%;
+  margin-top: 30px;
+}
+
+.tech{
+  display: inline-block;
+  font-weight: bold;
+  font-size: 20px;
+  padding: 5px 7px;  
+  margin: 8px;
+  color: rgb(207, 205, 205);
+  box-shadow: 8px 7px 10px rgba(207, 205, 205,0.7);
+  border-radius: 3px;
+}
